--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
       height: auto;
       object-fit: cover;
       position: absolute;
-      top: 45%;
-      left: 45%;
+      top: 50%;
+      left: 25%; /* Image slightly left aligned */
       transform: translate(-50%, -50%);
       z-index: 1;
       animation: ferrariZoom 6s ease-in-out forwards;
