--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     }
 
     .intro-image {
-      width: 40%;
+      width: 35%;  /* Slightly reduced image size */
       height: auto;
       object-fit: cover;
       position: absolute;
@@ -124,18 +124,18 @@
       letter-spacing: 1.5px;
       gap: 12px;
       margin-bottom: 20px;
-      color: #b00000;
+      color: #ff4d4d;  /* Brighter red color */
     }
 
     .section-heading .number {
       font-size: 18px;
       font-weight: bold;
-      color: #b00000;
+      color: #ff4d4d;
     }
 
     .section-heading .line {
       height: 1.5px;
-      background-color: #b00000;
+      background-color: #ff4d4d;  /* Brighter red color */
       width: 40px;
     }
 
