--- a/index.html
+++ b/index.html
@@ -10,17 +10,19 @@
 
     html, body {
       height: 100%;
-      font-family: 'Helvetica Neue', Helvetica, sans-serif;
+      font-family: Georgia, 'Times New Roman', Times, serif;
       scroll-behavior: smooth;
-      background-color: black;
-      color: white;
       overflow-x: hidden;
+      background: #4D0B0B url('/mnt/data/f16240ae-84e5-4d54-bb6a-bf1ed5ccb72d.jpg') center center / cover no-repeat fixed;
+      color: #F9F9F9;
       transition: background-color 1s ease, color 1s ease;
     }
 
+    /* .white-bg is not applied anymore, but kept here in case needed later */
     .white-bg {
-      background-color: white;
+      background-color: #ffffff;
       color: black;
+      background: #ffffff url('/mnt/data/f16240ae-84e5-4d54-bb6a-bf1ed5ccb72d.jpg') center center / cover no-repeat fixed;
     }
 
     .logo {
@@ -39,7 +41,7 @@
 
     section {
       width: 100%;
-      height: 100vh;
+      min-height: 100vh;
       padding: 80px 60px 60px;
       display: flex;
       flex-direction: column;
@@ -49,9 +51,8 @@
     .intro {
       justify-content: center;
       align-items: center;
-      background-color: black;
-      color: width;
       position: relative;
+      background: transparent;
     }
 
     .intro-image {
@@ -82,9 +83,9 @@
     }
 
     .centered-text h1 { font-size: 60px; margin-bottom: 20px; }
-    .tagline, .latin-tagline { font-size: 24px; font-weight: bold; color: red; }
+    .tagline, .latin-tagline { font-size: 24px; font-weight: bold; }
     .latin-tagline { margin-top: 10px; }
-    .coming-soon { margin-top: 20px; font-size: 20px; color: white; }
+    .coming-soon { margin-top: 20px; font-size: 20px; }
 
     .section-heading {
       display: flex;
@@ -95,12 +96,12 @@
       letter-spacing: 1.5px;
       gap: 12px;
       margin-bottom: 20px;
-      color: red;
+      color: #FF4D4D;
     }
 
     .section-heading .line {
       height: 1.5px;
-      background-color: red;
+      background-color: #FF4D4D;
       width: 40px;
     }
 
@@ -121,7 +122,7 @@
     }
 
     .form-box {
-      background: #fff;
+      background: rgba(255,255,255,0.8);
       padding: 40px;
       border-radius: 10px;
       max-width: 500px;
@@ -168,10 +169,12 @@
       padding: 20px;
       font-size: 14px;
       color: gray;
-      background: white;
+      background: rgba(255,255,255,0.8);
+      backdrop-filter: blur(5px);
     }
   </style>
 </head>
+
 <body>
   <img class="logo" src="https://i.postimg.cc/S2HvrdjX/IMG-4687.jpg" alt="SHIRYON Logo" />
 
@@ -229,10 +232,7 @@
     <p>If it’s obvious, it’s too late. If it already exists, I’m not interested.</p>
     <p>SHIRYON is the first of three ventures currently in motion. The others?<br>They’ll make the big players wish they got there first.</p>
     <p>— Jedidya Raju, Founder, SHIRYON</p>
-    
-    
   </section>
-
 
   <!-- Contact Section -->
   <section class="combined-contact-form">
@@ -265,7 +265,6 @@
   <script>
     setTimeout(() => {
       document.body.classList.add('reveal');
-      document.body.classList.add('white-bg');
     }, 7000);
   </script>
 </body>
