--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
       transition: background-color 1s ease, color 1s ease;
     }
 
-    /* .white-bg is not applied anymore, but kept here in case needed later */
     .white-bg {
       background-color: #ffffff;
       color: black;
@@ -46,6 +45,8 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
+      align-items: center;
+      text-align: center;
     }
 
     .intro {
