--- a/index.html
+++ b/index.html
@@ -13,15 +13,19 @@
       font-family: Georgia, 'Times New Roman', Times, serif;
       scroll-behavior: smooth;
       overflow-x: hidden;
-      background: #4D0B0B url('/mnt/data/f16240ae-84e5-4d54-bb6a-bf1ed5ccb72d.jpg') center center / cover no-repeat fixed;
-      color: #F9F9F9;
+      background: black;
+      color: white;
       transition: background-color 1s ease, color 1s ease;
     }
 
-    .white-bg {
-      background-color: #ffffff;
+    .white-slide {
+      background-color: white;
       color: black;
-      background: #ffffff url('/mnt/data/f16240ae-84e5-4d54-bb6a-bf1ed5ccb72d.jpg') center center / cover no-repeat fixed;
+    }
+
+    .black-slide {
+      background-color: black;
+      color: white;
     }
 
     .logo {
@@ -47,6 +51,7 @@
       justify-content: center;
       align-items: center;
       text-align: center;
+      transition: background-color 1s ease, color 1s ease;
     }
 
     .intro {
@@ -55,10 +60,6 @@
       position: relative;
       background-color: black;
       transition: background-color 1s ease;
-    }
-
-    .intro.white-bg {
-      background-color: white !important;
     }
 
     .intro-image {
@@ -88,10 +89,18 @@
       to { opacity: 1; }
     }
 
-    .centered-text h1 { font-size: 60px; margin-bottom: 20px; }
-    .tagline, .latin-tagline { font-size: 24px; font-weight: bold; }
+    .centered-text h1 {
+      font-size: 60px;
+      margin-bottom: 20px;
+      color: white;
+    }
+    .tagline, .latin-tagline {
+      font-size: 24px;
+      font-weight: bold;
+      color: #ccc;
+    }
     .latin-tagline { margin-top: 10px; }
-    .coming-soon { margin-top: 20px; font-size: 20px; }
+    .coming-soon { margin-top: 20px; font-size: 20px; color: #aaa; }
 
     .section-heading {
       display: flex;
@@ -111,11 +120,33 @@
       width: 40px;
     }
 
+    .section-heading .number {
+      font-size: 24px;
+      font-weight: bold;
+      animation: countIn 1s ease forwards;
+      opacity: 0;
+    }
+
+    @keyframes countIn {
+      from {
+        transform: translateY(20px);
+        opacity: 0;
+      }
+      to {
+        transform: translateY(0);
+        opacity: 1;
+      }
+    }
+
     p {
       font-size: 18px;
       line-height: 1.7;
       max-width: 900px;
       margin-bottom: 14px;
+      opacity: 0;
+      animation: fadeInText 1s ease forwards;
+      animation-delay: 0.5s;
+      animation-fill-mode: forwards;
     }
 
     .highlight { font-weight: bold; }
@@ -125,6 +156,8 @@
       flex-direction: column;
       align-items: center;
       padding: 80px 20px;
+      background-color: white;
+      color: black;
     }
 
     .form-box {
@@ -197,7 +230,7 @@
   </section>
 
   <!-- Section 1 -->
-  <section>
+  <section class="white-slide">
     <div class="section-heading">
       <span class="number">1</span><span class="line"></span><span>What We’re Building</span>
     </div>
@@ -207,7 +240,7 @@
   </section>
 
   <!-- Section 2 -->
-  <section>
+  <section class="black-slide">
     <div class="section-heading">
       <span class="number">2</span><span class="line"></span><span>Our Strategy</span>
     </div>
@@ -215,7 +248,7 @@
   </section>
 
   <!-- Section 3 -->
-  <section>
+  <section class="white-slide">
     <div class="section-heading">
       <span class="number">3</span><span class="line"></span><span>Three Pillars</span>
     </div>
@@ -226,7 +259,7 @@
   </section>
 
   <!-- Section 4 -->
-  <section>
+  <section class="black-slide">
     <div class="section-heading">
       <span class="number">4</span><span class="line"></span><span>The Exhibition</span>
     </div>
@@ -270,7 +303,6 @@
   <script>
     setTimeout(() => {
       document.body.classList.add('reveal');
-      document.querySelector('.intro').classList.add('white-bg');
     }, 7000);
   </script>
 </body>
